<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_actividad_principal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    tools:context="com.example.roberto.prac01.ActividadPrincipal">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/txtNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="52dp"
            android:id="@+id/txtNombre"
            android:layout_weight="1" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText3"
            android:layout_alignBaseline="@+id/txtNombre"
            android:layout_alignBottom="@+id/txtNombre"
            android:layout_toRightOf="@+id/txtNombre"
            android:layout_toEndOf="@+id/txtNombre"
            android:layout_weight="1" />

        <TextView
            android:text="@string/txtApellidos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtNombre"
            android:layout_alignRight="@+id/txtNombre"
            android:layout_alignEnd="@+id/txtNombre"
            android:layout_marginTop="52dp"
            android:id="@+id/txtApellidos"
            android:layout_weight="1" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:layout_below="@+id/editText3"
            android:layout_toRightOf="@+id/txtApellidos"
            android:layout_toEndOf="@+id/txtApellidos"
            android:layout_marginTop="21dp"
            android:id="@+id/editText4"
            android:layout_weight="1" />

        <TextView
            android:text="@string/txtEdad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtEdad"
            android:layout_alignBaseline="@+id/editText5"
            android:layout_alignBottom="@+id/editText5"
            android:layout_alignLeft="@+id/txtNombre"
            android:layout_alignStart="@+id/txtNombre"
            android:layout_weight="1" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:layout_marginTop="30dp"
            android:id="@+id/editText5"
            android:layout_below="@+id/editText4"
            android:layout_alignLeft="@+id/editText4"
            android:layout_alignStart="@+id/editText4"
            android:layout_weight="1" />

        <CheckBox
            android:text="@string/checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:id="@+id/checkBox2"
            android:layout_below="@+id/editText5"
            android:layout_alignLeft="@+id/txtEdad"
            android:layout_alignStart="@+id/txtEdad"
            android:layout_weight="1" />

        <Button
            android:text="@string/btnEnviar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/checkBox2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:id="@+id/button"
            android:layout_weight="1" />

    </LinearLayout>

</RelativeLayout>
